fix: z-index nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,7 @@ nav ul {
   margin: 0;
   padding: 0;
   transition: all 0.3s ease-in-out;
+  z-index: 10;
 }
 
 nav ul li a {
